# swagger_server/models/__init__.py
@@ -6,6 +6,8 @@ from __future__ import absolute_import
 from swagger_server.models.account_recoveryrequest_passphrase_update_token_content import AccountRecoveryrequestPassphraseUpdateTokenContent
 from swagger_server.models.account_recoveryrequest_username_reminder_content import AccountRecoveryrequestUsernameReminderContent
 from swagger_server.models.account_recoverysubmit_captcha_token_content import AccountRecoverysubmitCaptchaTokenContent
+from swagger_server.models.account_recoverysubmit_passphrase_update_token_content import AccountRecoverysubmitPassphraseUpdateTokenContent
+from swagger_server.models.account_recoverysubmit_secret_answer_content import AccountRecoverysubmitSecretAnswerContent
 from swagger_server.models.account_recoveryupdate_passphrase_content import AccountRecoveryupdatePassphraseContent
 from swagger_server.models.captcha_prompt import CaptchaPrompt
 from swagger_server.models.change_verication_mail_address import ChangeVericationMailAddress
@@ -31,16 +33,21 @@ from swagger_server.models.nonce_token1 import NonceToken1
 from swagger_server.models.nonce_token2 import NonceToken2
 from swagger_server.models.nonce_token2_content import NonceToken2Content
 from swagger_server.models.nonce_token3 import NonceToken3
+from swagger_server.models.nonce_token3_content import NonceToken3Content
+from swagger_server.models.nonce_token4 import NonceToken4
+from swagger_server.models.nonce_token5 import NonceToken5
+from swagger_server.models.passphrase_update_token import PassphraseUpdateToken
 from swagger_server.models.primary_account_details import PrimaryAccountDetails
 from swagger_server.models.registerchange_verification_email_content import RegisterchangeVerificationEmailContent
 from swagger_server.models.registerfinish_registration_content import RegisterfinishRegistrationContent
 from swagger_server.models.registeris_username_available_content import RegisterisUsernameAvailableContent
 from swagger_server.models.registerstart_registration_content import RegisterstartRegistrationContent
 from swagger_server.models.registerverify_email_address_content import RegisterverifyEmailAddressContent
-from swagger_server.models.request_password_reset_token import RequestPasswordResetToken
+from swagger_server.models.request_passphrase_reset_token import RequestPassphraseResetToken
 from swagger_server.models.request_username_reminder import RequestUsernameReminder
 from swagger_server.models.resend_verification_mail import ResendVerificationMail
 from swagger_server.models.submit_captcha_token import SubmitCaptchaToken
 from swagger_server.models.successful_authentication import SuccessfulAuthentication
 from swagger_server.models.update_passphrase import UpdatePassphrase
+from swagger_server.models.update_passphrase1 import UpdatePassphrase1
 from swagger_server.models.username import Username
