# swagger_server/models/account_recoverysubmit_passphrase_update_token_content.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class AccountRecoverysubmitPassphraseUpdateTokenContent(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, token: str=None):  # noqa: E501
+        """AccountRecoverysubmitPassphraseUpdateTokenContent - a model defined in Swagger
+
+        :param token: The token of this AccountRecoverysubmitPassphraseUpdateTokenContent.  # noqa: E501
+        :type token: str
+        """
+        self.swagger_types = {
+            'token': str
+        }
+
+        self.attribute_map = {
+            'token': 'token'
+        }
+        self._token = token
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'AccountRecoverysubmitPassphraseUpdateTokenContent':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The account_recoverysubmit_passphrase_update_token_content of this AccountRecoverysubmitPassphraseUpdateTokenContent.  # noqa: E501
+        :rtype: AccountRecoverysubmitPassphraseUpdateTokenContent
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def token(self) -> str:
+        """Gets the token of this AccountRecoverysubmitPassphraseUpdateTokenContent.
+
+
+        :return: The token of this AccountRecoverysubmitPassphraseUpdateTokenContent.
+        :rtype: str
+        """
+        return self._token
+
+    @token.setter
+    def token(self, token: str):
+        """Sets the token of this AccountRecoverysubmitPassphraseUpdateTokenContent.
+
+
+        :param token: The token of this AccountRecoverysubmitPassphraseUpdateTokenContent.
+        :type token: str
+        """
+        if token is None:
+            raise ValueError("Invalid value for `token`, must not be `None`")  # noqa: E501
+
+        self._token = token
