# swagger_server/models/nonce_token5.py
@@ -10,17 +10,17 @@ from swagger_server.models.nonce_token3_content import NonceToken3Content  # noq
 from swagger_server import util
 
 
-class NonceToken3(Model):
+class NonceToken5(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, nonce: str=None, content: NonceToken3Content=None):  # noqa: E501
-        """NonceToken3 - a model defined in Swagger
+        """NonceToken5 - a model defined in Swagger
 
-        :param nonce: The nonce of this NonceToken3.  # noqa: E501
+        :param nonce: The nonce of this NonceToken5.  # noqa: E501
         :type nonce: str
-        :param content: The content of this NonceToken3.  # noqa: E501
+        :param content: The content of this NonceToken5.  # noqa: E501
         :type content: NonceToken3Content
         """
         self.swagger_types = {
@@ -36,32 +36,32 @@ class NonceToken3(Model):
         self._content = content
 
     @classmethod
-    def from_dict(cls, dikt) -> 'NonceToken3':
+    def from_dict(cls, dikt) -> 'NonceToken5':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The NonceToken_3 of this NonceToken3.  # noqa: E501
-        :rtype: NonceToken3
+        :return: The NonceToken_5 of this NonceToken5.  # noqa: E501
+        :rtype: NonceToken5
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def nonce(self) -> str:
-        """Gets the nonce of this NonceToken3.
+        """Gets the nonce of this NonceToken5.
 
 
-        :return: The nonce of this NonceToken3.
+        :return: The nonce of this NonceToken5.
         :rtype: str
         """
         return self._nonce
 
     @nonce.setter
     def nonce(self, nonce: str):
-        """Sets the nonce of this NonceToken3.
+        """Sets the nonce of this NonceToken5.
 
 
-        :param nonce: The nonce of this NonceToken3.
+        :param nonce: The nonce of this NonceToken5.
         :type nonce: str
         """
         if nonce is None:
@@ -71,21 +71,23 @@ class NonceToken3(Model):
 
     @property
     def content(self) -> NonceToken3Content:
-        """Gets the content of this NonceToken3.
+        """Gets the content of this NonceToken5.
 
 
-        :return: The content of this NonceToken3.
+        :return: The content of this NonceToken5.
         :rtype: NonceToken3Content
         """
         return self._content
 
     @content.setter
     def content(self, content: NonceToken3Content):
-        """Sets the content of this NonceToken3.
+        """Sets the content of this NonceToken5.
 
 
-        :param content: The content of this NonceToken3.
+        :param content: The content of this NonceToken5.
         :type content: NonceToken3Content
         """
+        if content is None:
+            raise ValueError("Invalid value for `content`, must not be `None`")  # noqa: E501
 
         self._content = content
