# swagger_server/models/request_passphrase_reset_token.py
@@ -11,17 +11,17 @@ from swagger_server.models.nonce_token import NonceToken  # noqa: F401,E501
 from swagger_server import util
 
 
-class RequestPasswordResetToken(Model):
+class RequestPassphraseResetToken(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, nonce: NonceToken=None, content: AccountRecoveryrequestPassphraseUpdateTokenContent=None):  # noqa: E501
-        """RequestPasswordResetToken - a model defined in Swagger
+        """RequestPassphraseResetToken - a model defined in Swagger
 
-        :param nonce: The nonce of this RequestPasswordResetToken.  # noqa: E501
+        :param nonce: The nonce of this RequestPassphraseResetToken.  # noqa: E501
         :type nonce: NonceToken
-        :param content: The content of this RequestPasswordResetToken.  # noqa: E501
+        :param content: The content of this RequestPassphraseResetToken.  # noqa: E501
         :type content: AccountRecoveryrequestPassphraseUpdateTokenContent
         """
         self.swagger_types = {
@@ -37,32 +37,32 @@ class RequestPasswordResetToken(Model):
         self._content = content
 
     @classmethod
-    def from_dict(cls, dikt) -> 'RequestPasswordResetToken':
+    def from_dict(cls, dikt) -> 'RequestPassphraseResetToken':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The RequestPasswordResetToken of this RequestPasswordResetToken.  # noqa: E501
-        :rtype: RequestPasswordResetToken
+        :return: The RequestPassphraseResetToken of this RequestPassphraseResetToken.  # noqa: E501
+        :rtype: RequestPassphraseResetToken
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def nonce(self) -> NonceToken:
-        """Gets the nonce of this RequestPasswordResetToken.
+        """Gets the nonce of this RequestPassphraseResetToken.
 
 
-        :return: The nonce of this RequestPasswordResetToken.
+        :return: The nonce of this RequestPassphraseResetToken.
         :rtype: NonceToken
         """
         return self._nonce
 
     @nonce.setter
     def nonce(self, nonce: NonceToken):
-        """Sets the nonce of this RequestPasswordResetToken.
+        """Sets the nonce of this RequestPassphraseResetToken.
 
 
-        :param nonce: The nonce of this RequestPasswordResetToken.
+        :param nonce: The nonce of this RequestPassphraseResetToken.
         :type nonce: NonceToken
         """
         if nonce is None:
@@ -72,20 +72,20 @@ class RequestPasswordResetToken(Model):
 
     @property
     def content(self) -> AccountRecoveryrequestPassphraseUpdateTokenContent:
-        """Gets the content of this RequestPasswordResetToken.
+        """Gets the content of this RequestPassphraseResetToken.
 
 
-        :return: The content of this RequestPasswordResetToken.
+        :return: The content of this RequestPassphraseResetToken.
         :rtype: AccountRecoveryrequestPassphraseUpdateTokenContent
         """
         return self._content
 
     @content.setter
     def content(self, content: AccountRecoveryrequestPassphraseUpdateTokenContent):
-        """Sets the content of this RequestPasswordResetToken.
+        """Sets the content of this RequestPassphraseResetToken.
 
 
-        :param content: The content of this RequestPasswordResetToken.
+        :param content: The content of this RequestPassphraseResetToken.
         :type content: AccountRecoveryrequestPassphraseUpdateTokenContent
         """
         if content is None:
