# swagger_server/models/update_passphrase1.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.account_recoverysubmit_secret_answer_content import AccountRecoverysubmitSecretAnswerContent  # noqa: F401,E501
+from swagger_server.models.nonce_token import NonceToken  # noqa: F401,E501
+from swagger_server import util
+
+
+class UpdatePassphrase1(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, nonce: NonceToken=None, content: AccountRecoverysubmitSecretAnswerContent=None):  # noqa: E501
+        """UpdatePassphrase1 - a model defined in Swagger
+
+        :param nonce: The nonce of this UpdatePassphrase1.  # noqa: E501
+        :type nonce: NonceToken
+        :param content: The content of this UpdatePassphrase1.  # noqa: E501
+        :type content: AccountRecoverysubmitSecretAnswerContent
+        """
+        self.swagger_types = {
+            'nonce': NonceToken,
+            'content': AccountRecoverysubmitSecretAnswerContent
+        }
+
+        self.attribute_map = {
+            'nonce': 'nonce',
+            'content': 'content'
+        }
+        self._nonce = nonce
+        self._content = content
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UpdatePassphrase1':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The UpdatePassphrase_1 of this UpdatePassphrase1.  # noqa: E501
+        :rtype: UpdatePassphrase1
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def nonce(self) -> NonceToken:
+        """Gets the nonce of this UpdatePassphrase1.
+
+
+        :return: The nonce of this UpdatePassphrase1.
+        :rtype: NonceToken
+        """
+        return self._nonce
+
+    @nonce.setter
+    def nonce(self, nonce: NonceToken):
+        """Sets the nonce of this UpdatePassphrase1.
+
+
+        :param nonce: The nonce of this UpdatePassphrase1.
+        :type nonce: NonceToken
+        """
+        if nonce is None:
+            raise ValueError("Invalid value for `nonce`, must not be `None`")  # noqa: E501
+
+        self._nonce = nonce
+
+    @property
+    def content(self) -> AccountRecoverysubmitSecretAnswerContent:
+        """Gets the content of this UpdatePassphrase1.
+
+
+        :return: The content of this UpdatePassphrase1.
+        :rtype: AccountRecoverysubmitSecretAnswerContent
+        """
+        return self._content
+
+    @content.setter
+    def content(self, content: AccountRecoverysubmitSecretAnswerContent):
+        """Sets the content of this UpdatePassphrase1.
+
+
+        :param content: The content of this UpdatePassphrase1.
+        :type content: AccountRecoverysubmitSecretAnswerContent
+        """
+        if content is None:
+            raise ValueError("Invalid value for `content`, must not be `None`")  # noqa: E501
+
+        self._content = content
